# fjolnir-agent-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AEROSPACE_MODE.md  AGENT_BUILDER.md  AI_ASSURANCE_MODE.md  ARCHITECTURE.md  CONFORMANCE.md  DECISION_FRAMEWORK.md  FJOLNIR_CONSTITUTION.md  FOUNDING_PRINCIPLES.md  META_MODEL.md  POLICY_ENGINE.md  PROJECT_CHARTER.md  PROMPT_PATTERNS.md  QUALITY_GATES.md  REFERENCE_IMPLEMENTATION.md  RESEARCH_MODE.md  ROADMAP.md  RUNTIME_BACKENDS.md  SOFTWARE_ENGINEERING_MODE.md  WRITING_GUIDE.md
docs/adr/: 0000-template.md  0001-freeze-core-architecture-meta-model.md  0002-use-json-schema-and-a-resolved-ir.md  0003-reference-implementation-and-build-identity.md  0004-conformance-is-versioned-evidence-not-certification.md  0005-policies-only-narrow-authority.md  0006-automated-gates-verify-evidence-not-approval.md  0007-runtime-backends-render-but-never-execute-authority.md  0008-derived-registry-and-safe-definition-scaffolds.md  README.md
examples/: aerospace_review_agent.md  codex_engineering_agent.md  research_agent.md
faf/: __init__.py  backends.py  catalog.py  cli.py  compiler.py  errors.py  execution.py  gates.py  policy.py  registry.py  resolver.py  schema.py
schemas/v1/: README.md  agent-contract.schema.json  agent-genome.schema.json  (+7 more)
templates/: agent_role_template.md  review_checklist_template.md  system_prompt_base.md  task_briefing_template.md
tests/: consistency_review.md  prompt_quality_checklist.md  test_reference_implementation.py
(+30 files in other folders)
